--- a/views/view_surveys.html
+++ b/views/view_surveys.html
@@ -7,7 +7,7 @@
     </head>
     <body id="view_surveys" onload="viewSurveysURL()" style="background-color: #DFE4E8; width: 100%">
         <div class="container-fluid" id="primary_view_surveys">
-            <h1 class="page-header">Fill Survey</h1>
+            <h1 class="page-header">View Survey</h1>
             <h3>Select the survey you will be viewing.</h3>
             
             <!--TABLE OF ALL THE AVAILABLE SURVEYS-->
