--- a/views/index.html
+++ b/views/index.html
@@ -16,7 +16,7 @@
           <a class="navbar-brand" href="index">
               <img src="images/SurvyaySmallLogo.jpg" alt="" style="float:left; width:30%">
           </a>
-          <h2>Welcome, User!</h2>
+          <h2 style="text-align: right">Welcome, User!</h2>
           <button type="button" class="btn btn-primary" onclick=logout() style="
                     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
                     padding: 14px 20px;
@@ -25,6 +25,7 @@
                     cursor: pointer;
                     width: 130px;
                     border-radius: 5px;
+                    text-align: right;
                     font-size: 15pt;">Logout</button>
       </nav>
 
