--- a/views/index.html
+++ b/views/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -35,7 +35,7 @@
                 <div class="col-sm-3 col-md-2 dropdown" style="padding-right: 0; padding-left: 0">
                     <ul class="dropdown-menu flex-column">
                         <!--TODO: Add appropriate Home link-->
-                        <button class="dropdown-item active"> Home</button>
+                        <button onclick="load_tab('homepage')" class="dropdown-item active"> Home</button>
                         <div class="dropdown-container" style="display: none"></div>
 
                         <button class="dropdown-item"> Fill</button>
@@ -62,6 +62,7 @@
 
                 <!--MAIN BODY-->
                 <div class="col-sm-3 col-md-9 main" id="mainBody">
+                    <!--<id ="homepage" style="background-color: #DFE4E8; width: 100%"></id> //this is what I tried to make-->
                     <h1 class="page-header" style="2%;padding-top:2%">Home</h1>
                     <p >Welcome! Make a site selection to begin!</p>
                 </div>
