Made homepage accessible
Thanks Tori for modifying the server.js

--- a/views/homepage.html
+++ b/views/homepage.html
@@ -7,7 +7,7 @@
 
 <body id="homepage" style="background-color: #DFE4E8; width: 100%">
     <div class="container-fluid" id="primary">
-        <h1 class="page-header">Home</h1>
+        <h1 id="page-header">Home</h1>
         <h3>Welcome! Make a site selection to begin!</h3>
     </div>
 </body>
