--- a/views/index.html
+++ b/views/index.html
@@ -63,7 +63,7 @@
                 <!--MAIN BODY-->
                 <div class="col-sm-3 col-md-9 main" id="mainBody">
                     <h1 class="page-header" style="2%;padding-top:2%">Home</h1>
-                    <p >Welcome! Make a site selection to begin!</p>
+                    <h3>Welcome! Make a site selection to begin!</h3>
                 </div>
                 <!--MAIN BODY-->
             </div>
