Homepage is good to go!
Thanks to Molly showing me that trick

--- a/views/index.html
+++ b/views/index.html
@@ -10,10 +10,10 @@
 
     <title>Surv-YAY Homepage</title>
   </head>
-  <body>
+  <body onload="load_tab('homepage')">
       <!--HEADER-->
       <nav class="navbar navbar-expand-lg navbar bg static-top">
-          <a class="navbar-brand" href="index">
+          <a class="navbar-brand" href="index" id="homepage">
               <img src="images/SurvyaySmallLogo.jpg" alt="" style="float:left; width:30%">
           </a>
           <h2 style="text-align: right">Welcome, User!</h2>
@@ -62,8 +62,8 @@
 
                 <!--MAIN BODY-->
                 <div class="col-sm-3 col-md-9 main" id="mainBody">
-                    <h1 class="page-header" style="2%;padding-top:2%">Home</h1>
-                    <h3>Welcome! Make a site selection to begin!</h3>
+                    <!--<h1 class="page-header" style="2%;padding-top:2%">Home</h1>
+                    <h3>Welcome! Make a site selection to begin!</h3>-->
                 </div>
                 <!--MAIN BODY-->
             </div>
