--- a/views/view_records.html
+++ b/views/view_records.html
@@ -1,4 +1,4 @@
-<html lang="en">
+﻿<html lang="en">
     <head>
         <link rel="stylesheet" href="css/bootstrap.css">
         <meta charset="utf-8">
