--- a/views/index.html
+++ b/views/index.html
@@ -61,10 +61,7 @@
                 <!--SIDE NAVBAR-->
 
                 <!--MAIN BODY-->
-                <div class="col-sm-3 col-md-9 main" id="mainBody">
-                    <!--<h1 class="page-header" style="2%;padding-top:2%">Home</h1>
-                    <h3>Welcome! Make a site selection to begin!</h3>-->
-                </div>
+                <div class="col-sm-3 col-md-9 main" id="mainBody"></div>
                 <!--MAIN BODY-->
             </div>
       </div>
