--- a/views/create_survey.html
+++ b/views/create_survey.html
@@ -37,6 +37,7 @@
     var chosen = [];
     var moreCh = [];
     var check = [];
+
     document.getElementById("submit").addEventListener("click", function(){
         submitQuestions(document.getElementById("survTitle").value,
         document.getElementById("survD").value);}, false);
@@ -54,46 +55,49 @@
                     question_data += '<td>'+value.Ques_text+'</td>';
                     question_data += '</tr>';
                 });
-
                 $('#questionTable').append(question_data); // adds row of data to table
             });
         })
     }
-    
+    /**
     function submitQuestions(title, des){
         console.log(title);
         console.log(des);
-        var chkd = document.getElementById("questionTable");
-        var chkdb = chkd.getElementsByTagName('tncheckbox');
+        var checkBoxId = 1;
+        var table = document.getElementById('questionTable');
         // checking which check boxes are checked
-        for (var i = 0; i < chkdb.length; i++){
-            if (chkdb[i].checked){
-                check.push(chkdb[i]);
-            }
+        if((table.getElementsByTagName('tncheckbox') + checkBoxId).checked){
+            check.push(document.getElementById("tncheckbox" + checkBoxId).value);
+            checkBoxId++;
         }
+
         console.log(check);
         
         // posting the survey title and description 
-        fetch('http://18.219.137.210:3000/api/survey/add', {
+        fetch('http://18.219.137.210:3000/api/surveys/add', {
             method: 'POST',
             headers: {'Content-Type': 'application/json'},
             body: JSON.stringify({SurvTitle:title,
                                   SurvDescription:des})
-            }).then((res) => res.json())
-            .then((data) =>  postQ(data))
-            .catch((err)=>console.log(err))
-    }
-
-
-    function postQ(dat){
-        // posting the chosen questions to the new survey 
-        fetch('http://18.219.137.210:3000/api/surveys/add_question', {
-            method: 'POST',
-            headers: {'Content-Type': 'application/json'},
-            body: JSON.stringify({SurvID:dat,
-                                  QuesID:des})
         }).then((res) => res.json())
-        .then((data) =>  console.log(data))
+        .then((data) =>  postQ(data.insertId, check))
         .catch((err)=>console.log(err))
     }
+*/
+/**
+    function postQ(dat, check){
+        var des = check;
+        des.forEach(choice =>{
+            // posting the chosen questions to the new survey 
+            fetch('http://18.219.137.210:3000/api/surveys/add_question', {
+                method: 'POST',
+                headers: {'Content-Type': 'application/json'},
+                body: JSON.stringify({SurvID:dat,
+                                    QuesID:choice})
+            }).then((res) => res.json())
+            .then((data) =>  console.log(data))
+            .catch((err)=>console.log(err))
+        })
+    }
+  */  
 </script>
