--- a/views/index.html
+++ b/views/index.html
@@ -16,16 +16,27 @@
           <a class="navbar-brand" href="index">
               <img src="images/SurvyaySmallLogo.jpg" alt="" style="float:left; width:30%">
           </a>
-          <h2>Welcome, User!</h2>
-          <button type="button" class="btn btn-primary" onclick=logout() style="background-color:#9DCE5B">Logout</button>
+          <h2 style="text-align: right">Welcome, User!</h2>
+          <button type="button" class="btn btn-primary" onclick=logout() style="
+                    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                    padding: 14px 20px;
+                    margin: 8px 0;
+                    border: none;
+                    cursor: pointer;
+                    width: 130px;
+                    border-radius: 5px;
+                    font-size: 15pt;
+                    text-align: right">Logout</button>
       </nav>
 
       <div class="container-fluid">
             <div class="row">
                 <!--SIDE NAVBAR-->
-                <div class="col-sm-3 col-md-2 dropdown" style="padding-right: 0; padding-left: 0">
+                <div class="col-sm-2 col-md-1 dropdown" style="padding-right: 0; padding-left: 0">
                     <ul class="dropdown-menu flex-column">
                         <!--TODO: Add appropriate Home link-->
+                        <button class="dropdown-item active"> Home</button>
+                        <div class="dropdown-container" style="display: none"></div>
 
                         <button class="dropdown-item"> Fill</button>
                         <div class="dropdown-container">
@@ -50,8 +61,8 @@
                 <!--SIDE NAVBAR-->
 
                 <!--MAIN BODY-->
-                <div class="col-sm-3 col-md-9 main" id="mainBody">
-                    <h1 class="page-header" style="2%;padding-top:2%">Home</h1>
+                <div class="col-sm-4 col-md-10 main" id="mainBody">
+                    <h1 class="page-header" style="padding-top:2%">Home</h1>
                     <p >Welcome! Make a site selection to begin!</p>
                 </div>
                 <!--MAIN BODY-->
