--- a/views/admin_space.html
+++ b/views/admin_space.html
@@ -21,21 +21,21 @@
         <h1>Admin Space</h1>
 
         <h2>Create new user:</h2>
-        <label>First name:</label>
+        <label>First Name:</label>
         <input type="text" id="firstN"><br><br>
-        <label>Last name:</label>
+        <label>Last Name:</label>
         <input type="text" id="lastN"><br><br>
         <label>Email:</label>
         <input type="text" id="email"><br><br>
-        <label>Set new Privileges: </label>
+        <label>Set New Privileges: </label>
         <select class="mdb-select md-form colorful-select dropdown-warning" id="new_roles">
             <option value="0">Roles</option>
             <!--where the roles go-->
         </select>
         <br> <br>
-        <label>New Username (6Characters):</label>
+        <label>New Username (6 Characters):</label>
         <input type="text" id="userName" maxlength="6"><br><br>
-        <label>New user password:</label>
+        <label>New User Password:</label>
         <input style="width:185px; display:inline;" class="form-control" placeholder="******" type="password" id="newUserPassword">
         <br><br>
         <button type="button" id="submitNewUser">Submit ></button><br>
@@ -43,10 +43,10 @@
         <h2>Update user:</h2>
         <label>User ID:</label>
         <input type="text" id="updateUser" maxlength="6"><br><br>
-        <label>Set new password:</label>
+        <label>Set New Password:</label>
         <input style="width:185px; display:inline;" class="form-control" placeholder="******" type="password" id="updateUserPassword">
         <br><br>
-        <label>Set new Privileges: </label>
+        <label>Set New Privileges: </label>
         <select class="mdb-select md-form colorful-select dropdown-warning" id="up_roles">
             <option value="0">Roles</option>
             <!--where the roles go-->
